--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
 
     <section id="mainWrapper" class="" role="main" style="margin-top:50px;">
-      <h1>xxBootstrap/SASS - Styleguide</h1>
+      <h1>Bootstrap/SASS - Styleguide</h1>
 
       <!-- COLORS -->
       <article id="article-colors" class="sg-container">
