--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap/SASS Starter Kit 2017</title>
+    <title>Bootstrap/SASS Starter Kit 2017-2019</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
